--- a/weather-to-wear-client/public/index.html
+++ b/weather-to-wear-client/public/index.html
@@ -21,6 +21,7 @@
     -->
     <!-- Bootstrap Css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
     <title>&#9728; Weather to Wear &#9730;</title>
   </head>
   <body>
