add footer, hidden for now

--- a/weather-to-wear-client/public/index.html
+++ b/weather-to-wear-client/public/index.html
@@ -40,4 +40,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- <footer>
+    &#9825; Heather You &#169; 2018 &#9825;
+    <p>Weather data provided by: <img src="%PUBLIC_URL%/wundergroundLogo.png" height="20px" alt="Weather underground"></p>
+  </footer> -->
 </html>
